tests/baselines/reference/genericTypeConstraints.errors.txt
tests/cases/compiler/genericTypeConstraints.ts(9,31): error TS2344: Type 'FooExtended' does not satisfy the constraint 'Foo'.
  Property 'fooMethod' is missing in type 'FooExtended' but required in type 'Foo'.


==== tests/cases/compiler/genericTypeConstraints.ts (1 errors) ====
    class Foo {
        fooMethod() {}
    }
    
    class FooExtended { }
    
    class Bar<T extends Foo> { }
    
    class BarExtended extends Bar<FooExtended> {
                                  ~~~~~~~~~~~
!!! error TS2344: Type '{|FooExtended|0|}' does not satisfy the constraint '{|Foo|1|}'.
!!! error TS2344:   Property 'fooMethod' is missing in type 'FooExtended' but required in type 'Foo'.
!!! related TS2728 tests/cases/compiler/genericTypeConstraints.ts:2:5: 'fooMethod' is declared here.
!!! annotated symbol 0 tests/cases/compiler/genericTypeConstraints.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeConstraints.ts:1:7
        constructor() {
            super();
        }
    }